--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 
 <li id="netbsd">NetBSD
 <ul>
-<li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
 <li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
 <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
-<li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
 <li><a href="./netbsd/update_pkgsrc.html">安全なpkgsrc(7)パッケージの更新</a></li>
+<li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
+<li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
+<li><a href="./netbsd/buildbot.html">Buildbot on NetBSD</a></li>
 <li><a href="./netbsd/how_to_be_developer.html">NetBSD開発者になる方法</a></li>
 </ul></li>
 
