--- a/netbsd/buildbot.html
+++ b/netbsd/buildbot.html
@@ -152,6 +152,7 @@ c['www'] = dict(port=8010,
 <img src="./images/buildbot_002.png" alt="Buildbot Workers">
 
 <h2 id="example1">事例1: Webページを自動でデプロイする</h2>
+<p>このページはhttps://github.com/user340/wwwリポジトリで管理されています。この例ではBuildbotを使い、リポジトリ内のコードに変更があったときに特定のコマンドをWorkerに実行させるように設定します。</p>
 
 <hr>
 <footer>
