Update: meetup log, about browser

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <h2 id="log">Meet up log</h2>
 <ul>
-<li><a href="./community/FreeBSD_Workshop">FreeBSDワークショップ</a></li>
+<li><a href="./community/FreeBSD_Workshop/index.html">FreeBSDワークショップ</a></li>
 </ul>
 
 <h2 id="links">Links</h2>
