--- a/introduction/index.html
+++ b/introduction/index.html
@@ -46,8 +46,8 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
         <ol>
         <li>Webブラウザ
           <ol>
-            <li>CUI Webブラウザ&mdash;&mdash;w3m</li>
-            <li>GUI Webブラウザ&mdash;&mdash;Firefox</li>
+            <li><a href="./w3m.html">CUI Webブラウザ&mdash;&mdash;w3m</a></li>
+            <li><a href="./firefox.html">GUI Webブラウザ&mdash;&mdash;Firefox</a></li>
           </ol>
         </li>
         <li>メーラ
