--- a/introduction/w3m.html
+++ b/introduction/w3m.html
@@ -22,9 +22,24 @@
 # make install clean clean-depends</code></pre>
 
 <h2>使い方</h2>
-<p>マニュアルは/usr/pkg/share/w3m/w3mhelp-w3m_ja.htmlを参照してください。2019年3月23日の時点ではこのファイルはEUC-JPでエンコーディングされているため、環境によっては<code>w3m(1)</code>に<code>-I EUC-JP</code>オプションを渡して実行しないと文字化けするかもしれません。ちなみに英語版のマニュアルはUTF-8のようです。</p>
+<p>基本的な使い方は/usr/pkg/share/w3m/w3mhelp-w3m_ja.htmlを参照してください。2019年3月23日の時点ではこのファイルはEUC-JPでエンコーディングされているため、環境によっては<code>w3m(1)</code>に<code>-I EUC-JP</code>オプションを渡して実行しないと文字化けするかもしれません。ちなみに英語版のマニュアルはUTF-8のようです。</p>
 
 <pre><code>$ w3m -I EUC-JP /usr/pkg/share/w3m/w3mhelp-w3m_ja.html</code></pre>
+
+<p>更に詳細な文書は/usr/pkg/share/doc/w3m/doc-jp以下にあります。</p>
+
+<h3>lynx風の操作にする</h3>
+<p><code>w3m(1)</code>のキー操作は$HOME/.w3m/keymapで定義されています。<code>pkgsrc(7)</code>で提供されているパッケージでは、標準で/usr/pkg/share/doc/w3m/doc-jp/keymap.default通りのキーマップですが、/usr/pkg/share/doc/w3m/doc-jp/keymap.lynxを$HOME/.w3m/keymapにコピーすることでlynx風のキーマップに変更できます。</p>
+
+<h3>キーマップを定義する</h3>
+<p><code>w3m(1)</code>ではユーザ自身で任意のキーマップを定義できます。定義は$HOME/.w3m/keymapファイルに書きます。書式は以下の通りです。w3mのコマンドは/usr/pkg/share/doc/w3m/doc-jp/README.funcから確認できます。</p>
+
+<pre><code>keymap キーバインド w3mのコマンド</code></pre>
+
+<p>たとえばメタキーとhを入力することでwww.google.comへ移動するキーマップを定義するには次のように書きます。</p>
+
+<pre><code>keymap M-h GOTO www.google.com</code></pre>
+
 <hr>
 <footer>
 <div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
