WIP: references and neomutt

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -21,7 +21,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
 <h2>目次</h2>
 <ol>
-  <li><a href="./intro.html">はじめに</a></li>
+  <li><a href="./intro.html"><b>はじめに</b></a></li>
   <li><a href="./install.html">OSのインストールと初期設定</a></li>
   <li>管理者向けソフトウェア
     <ol>
@@ -35,6 +35,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
     <ol>
       <li>デスクトップ環境
         <ol>
+        <li>シェル&mdash;&mdash;zsh</li>
         <li><a href="./i3.html">ウィンドウマネージャ&mdash;&mdash;i3</a></li>
         <li><a href="./urxvt.html">仮想端末&mdash;&mdash;rxvt-unicode</a></li>
         <li><a href="./tmux.html">端末多重化&mdash;&mdash;tmux</a></li>
@@ -51,7 +52,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
           </ol>
         </li>
         <li>メーラ
-          <ol><li>CUIメーラ&mdash;&mdash;NeoMutt</li></ol>
+          <ol><li><a href="./neomutt.html">CUIメーラ&mdash;&mdash;NeoMutt</a></li></ol>
         </li>
         <li>暗号化・パスワード管理
           <ol>
@@ -63,6 +64,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
       </li>
     </ol>
   </li>
+  <li><a href="./references.html">参考文献</a></li>
   </ol>
 <hr>
 <footer>
