--- a/introduction/references.html
+++ b/introduction/references.html
@@ -13,8 +13,10 @@
 <h1>参考文献</h1>
 <hr>
 <dl>
-  <dt><a href="https://wiki.archlinux.jp/">ArchWiki</a></dt>
-  <dd>Linux DistributionのひとつArch LinuxのWikiですが、ソフトウェアの使い方や設定方法がかなり詳しく記載されています。パッケージのインストール手順はArch Linux固有の説明になっているのは当然ですが、「どのようなコマンドを実行すればいいか」「どのように設定を書いたらいいのか」はOSとは直接の関係はないはずなので、Arch Linuxユーザでなくても非常に有益な情報源です。</dd>
+<dt><a href="https://wiki.archlinux.jp/">ArchWiki</a></dt>
+<dd>Linux DistributionのひとつArch LinuxのWikiですが、ソフトウェアの使い方や設定方法がかなり詳しく記載されています。パッケージのインストール手順はArch Linux固有の説明になっているのは当然ですが、「どのようなコマンドを実行すればいいか」「どのように設定を書いたらいいのか」はOSとは直接の関係はないはずなので、Arch Linuxユーザでなくても非常に有益な情報源です。</dd>
+<dt><a href="https://netbsd.org/docs/">NetBSD Documentation</a></dt>
+<dd>NetBSD公式文書です。一般ユーザではなくむしろ開発者向けの文書に比重が置かれており、文書内で言及されるソフトウェアもそのほとんどがNetBSDのベースシステムに存在するものとなっています。NetBSD固有の問題はここを参照すると良いでしょう。</dd>
 </dl>
 <hr>
 <footer>
