Update: Insert index into intro.html

--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -12,8 +12,12 @@
 <body><div class="inner">
 <h1>はじめに</h1>
 <hr>
+<ol>
+<li><a href="#style">コマンドラインの表記</a></li>
+<li><a href="#man">オンラインマニュアル</a></li>
+</ol>
 
-<h2>コマンドラインの表記</h2>
+<h2 id="style">コマンドラインの表記</h2>
 <p>このページではコマンドライン上の操作を説明するとき、普通の文章と区別しやすくなるよう</p>
 
 <pre><code>$ ls</code></pre>
@@ -34,7 +38,7 @@ main(void)
 
 <p>1行目は"#"から始まっているがコマンドライン上の操作ではなくC言語の典型的なHello Worldです。これはテキストファイルの中身を表しています。黒線の中身の意味は文脈に応じて判断してください。</p>
 
-<h2>オンラインマニュアル</h2>
+<h2 id="man">オンラインマニュアル</h2>
 
 <p>マニュアルページはオンラインマニュアル（on-line manual pages）とも呼ばれ、BSD Unixであればベースシステムに標準でインストールされています。GNU/Linuxディストリビューションは別途パッケージをインストールする必要があるかもしれません。</p>
 
