Add alt attribute

--- a/coding/html.html
+++ b/coding/html.html
@@ -96,7 +96,7 @@ sed -i 's/変更前のテキスト/変更後のテキスト/' {} \;</code></pre>
 
 <p><a href="https://www.websiteplanet.com/ja/webtools/imagecompressor/">WebsitePlanet.com</a>ではPNG, JPEG形式の画像を圧縮できるツールを公開しています。ひとつ50MB以内で最大40個の画像を一度に圧縮できるようです。</p>
 
-<img src="./images/html_001.png">
+<img src="./images/html_001.png" alt="imagecompressor">
 
 <p>結果、43%圧縮できたようです。</p>
 
