Remove boarder attribute from table tag

--- a/introduction/i3.html
+++ b/introduction/i3.html
@@ -166,7 +166,7 @@ bar {
 
 <p>よく使う機能とそのキー操作は以下の通りです。"$mod"はホットキーを意味します。当然、設定ファイルの内容に操作が影響されるため上述の設定ファイルに沿ったものとなっています。</p>
 
-<table border="1"><thead>
+<table><thead>
 <tr><th>機能</th><th>操作</th></tr>
 </thead><tbody>
 <tr><td>仮想端末を起動する</td><td>$mod + Enter</td></tr>
