--- a/introduction/install.html
+++ b/introduction/install.html
@@ -35,7 +35,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 
 <p>仮想マシンにNetBSDをインストールするのであれば、<a href="https://legacyos.ichmy.0t0.jp/netbsd/">NetBSDで遊ぼうのこーな</a>を参考に仮想化ソフトウェアを選ぶといいでしょう。このページから引用し、さらに僕が普段使っているBhyveや使ったことのあるXenも加えると次のようになります。</p>
 
-<table border="1">
+<table>
 <tr>
   <th>ソフトウェア</th>
   <th>Addin</th>
