Remove border attribute from table tag

--- a/introduction/tmux.html
+++ b/introduction/tmux.html
@@ -62,7 +62,7 @@ set -g display-panes-time 5000</code></pre>
 <h2>操作方法</h2>
 <p>tmuxの操作は「プレフィックス＋キー」が基本です。上記の設定ファイルではプレフィックスをCtrl-tにしていますから、tmuxの操作はCtrl-tプラスなにかのキー入力ということになります。本稿では「$prefix-x」という形式で表します。</p>
 
-<table border="1">
+<table>
 <thead><tr><th>キー操作</th><th>動作</th></tr></thead>
 <tbody>
 <tr><td>$prefix-"</td><td>ペインを横に分割する。</td></tr>
