--- a/introduction/install.html
+++ b/introduction/install.html
@@ -79,17 +79,17 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <p><code>ifconfig(8)</code>でネットワークインタフェースの名前を確認します。有線接続する場合はmedia: Ethernet autoselect、無線接続する場合はmedia: IEEE802.11となっているネットワークインタフェースを探します。</p>
 
 <pre><code># ifconfig
-wm0: flags=0x8802<BROADCAST,SIMPLEX,MULTICAST> mtu 1500
-        capabilities=7ff80<TSO4,IP4CSUM_Rx,IP4CSUM_Tx,TCP4CSUM_Rx>
-        capabilities=7ff80<TCP4CSUM_Tx,UDP4CSUM_Rx,UDP4CSUM_Tx,TCP6CSUM_Rx>
-        capabilities=7ff80<TCP6CSUM_Tx,UDP6CSUM_Rx,UDP6CSUM_Tx,TSO6>
+wm0: flags=0x8802&lt;BROADCAST,SIMPLEX,MULTICAST&gt; mtu 1500
+        capabilities=7ff80&lt;TSO4,IP4CSUM_Rx,IP4CSUM_Tx,TCP4CSUM_Rx&gt;
+        capabilities=7ff80&lt;TCP4CSUM_Tx,UDP4CSUM_Rx,UDP4CSUM_Tx,TCP6CSUM_Rx&gt;
+        capabilities=7ff80&lt;TCP6CSUM_Tx,UDP6CSUM_Rx,UDP6CSUM_Tx,TSO6&gt;
         enabled=0
-        ec_capabilities=7<VLAN_MTU,VLAN_HWTAGGING,JUMBO_MTU>
+        ec_capabilities=7&lt;VLAN_MTU,VLAN_HWTAGGING,JUMBO_MTU&gt;
         ec_enabled=0
         address: 4d:a8:1f:24:ab:03
         media: Ethernet autoselect (none)
         status: no carrier
-iwn0: flags=0x8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> mtu 1500
+iwn0: flags=0x8843&lt;UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST&gt; mtu 1500
         ssid SSID nwkey *****
         powersave off
         bssid 6d:d4:18:01:a6:14 chan 10
@@ -99,9 +99,9 @@ iwn0: flags=0x8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> mtu 1500
         inet 192.168.100.102/24 broadcast 192.168.100.255 flags 0x0
         inet6 fe80::629b:d0c1:135b:eb24%iwn0/64 flags 0x0 scopeid 0x2
         inet6 2001:268:c146:5657:63c1:78ae:4457:e5ae/64 flags 0x0
-lo0: flags=0x8049<UP,LOOPBACK,RUNNING,MULTICAST> mtu 33624
+lo0: flags=0x8049&lt;UP,LOOPBACK,RUNNING,MULTICAST&gt; mtu 33624
         inet 127.0.0.1/8 flags 0x0
-        inet6 ::1/128 flags 0x20<NODAD>
+        inet6 ::1/128 flags 0x20&lt;NODAD&gt;
         inet6 fe80::1%lo0/64 flags 0x0 scopeid 0x3</code></pre>
 
 <p>この出力は既に無線接続が設定されているものですが、ここで有線接続のネットワークインタフェースはwm0、無線ではiwn0ということがmediaの行から分かります。</p>
@@ -148,7 +148,7 @@ network={
 
 <p>このコマンドで得られた出力を/etc/wpa_supplicant.confに書き込みます。</p>
 
-<pre><code># wpa_passphrase home-ssid password >> /etc/wpa_supplicant.conf</code></pre>
+<pre><code># wpa_passphrase home-ssid password &gt;&gt; /etc/wpa_supplicant.conf</code></pre>
 
 <p><code>wpa_supplicant(8)</code>を実行します。</p>
 
