--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -28,7 +28,7 @@
 
 <p>黒線で囲われているテキストは必ずしもコマンドライン上の操作を表すとは限りません。たとえば</p>
 
-<pre><code>#include <stdio.h>
+<pre><code>#include &lt;stdio.h&gt;
 int
 main(void)
 {
