--- a/introduction/index.html
+++ b/introduction/index.html
@@ -22,11 +22,12 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <h2>目次</h2>
 <ol>
   <li><a href="./intro.html"><b>はじめに</b></a></li>
+  <li>Unixコマンドラインの操作方法</li>
   <li><a href="./install.html">OSのインストールと初期設定</a></li>
   <li>管理者向けソフトウェア
     <ol>
       <li><a href="./openssh.html">リモートログイン&mdash;&mdash;OpenSSH</a></li>
-      <li>ファイアウォール&mdash;&mdash;pf</li>
+      <li>ファイアウォール&mdash;&mdash;npf</li>
       <li><a href="./clamav.html">アンチウイルス&mdash;&mdash;ClamAV&reg;</a></li>
     </ol>
   </li>
@@ -64,6 +65,8 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
       </li>
     </ol>
   </li>
+  <li>Unixとテキストファイル</li>
+  <li>シェルまたはPythonによるプログラミング</li>
   <li><a href="./references.html">参考文献</a></li>
   </ol>
 <hr>
