little update: change title

--- a/netbsd/update_pkgsrc.html
+++ b/netbsd/update_pkgsrc.html
@@ -13,7 +13,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <title>e-yuuki.org</title>
 </head>
 <body><div class="inner">
-<h1>安全なpkgsrc(7)パッケージの更新</h1>
+<h1>pkg_comp(8)による安全なpkgsrc(7)パッケージの更新</h1>
 <hr>
 <p>NetBSDではThird-partyソフトウェアのインストールに<code>pkgsrc(7)</code>を使います。しかし'このシステムを使うにあたっては、ソフトウェアをインストールするよりもむしろインストールされたソフトウェアをどう更新していくかが大きな問題となります。なぜなら、ひとつのパッケージには複数のパッケージが依存しているのが普通であり、ソフトウェアをインストールすればするほどビルドが複雑になるからです。ユーザからすれば使いたいソフトウェアに依存したパッケージについて意識を向ける機会はほとんどありません。</p>
 
